# trabalho-02-brunojoao

./: .gitignore  ARCHITECTURE.md  COMPILER_PIPELINE.md  DEFENSE_SCRIPT.md  Dockerfile  MODULES.md  README.md
relatorio/: relatorio.tex
vs-code-extensions/: sl-recognizer-0.0.1.vsix
workspace/: LICENSE  compiler  compiler.cabal
workspace/app/: Main.hs
workspace/scripts/: run_examples.sh
workspace/src/: AST.hs  ASTPretty.hs  CodePretty.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.info  Parser.y  Token.hs  TokenPretty.hs
workspace/src/AST/: AST.hs  Pretty.hs  PrettyTree.hs
workspace/src/Environment/: FuncEnv.hs  StructEnv.hs  SymbolTable.hs  TypeEnv.hs
workspace/src/Errors/: Diagnostic.hs  Pretty.hs
workspace/src/Interpreter/: Builtins.hs  Eval.hs  Value.hs
workspace/src/Lexer/: Lexer.hs  Lexer.x
workspace/src/Parser/: Parser.hs  Parser.info  Parser.y
workspace/src/Semantic/: Analyzer.hs  FunctionChecker.hs  ScopeChecker.hs  StructChecker.hs
workspace/src/Token/: Pretty.hs  Token.hs
workspace/src/TypeChecker/: Infer.hs  Types.hs  Unify.hs
workspace/test/: Main.hs  TestInterpreter.hs  TestLexer.hs  TestLimitations.hs  TestParser.hs  TestSemantic.hs
workspace/test/examples/: ex02_records_arrays.sl  ex03_reverse_array.sl  ex04_bmi_booleans.sl  ex06_map_function.sl  ex07_array_oob_runtime.sl  ex08_first_class_function_limit.sl  grammar
